--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </div>
     <footer class="footer">
-      <p>Strona stworzona przez:</p>
+      <p class="footer__title">Strona stworzona przez:</p>
       <a class="footer__link" href="https://github.com/mateuszGadecki"
         >Mateusz Gadecki</a
       >
